Backported to 1.21.1 from 1.21.11.